2015-05-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Hopefully quiet Coverity 10305
	"Untrusted loop bound".

	* coders/tga.c (ReadTGAImage): Hopefully quiet Coverity 53418
	"Untrusted loop bound".

	* magick/tempfile.c (AcquireTemporaryFileDescriptor): Eliminate
	all use of operating system provided temporary file allocation
	functions (all apparently flawed in one way or another) and rely
	exclusively on our own implementation.

	* magick/constitute.c (ConstituteImage): Quiet Coverity 53399
	"Logically dead code".

	* coders/webp.c (ReadWEBPImage): Quiet Coverity 53400 "Logically dead
	code".

	* coders/miff.c (WriteRunlengthPacket): More work to quiet
	Coverity 10186 and 10214 "Missing break in switch".

2015-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tempfile.c (AcquireTemporaryFileDescriptor): Thoroughly
	vet temporary file path.  Might quiet Coverity 64613 "Use of
	untrusted string value".

	* wand/magick_compat.c (ParseGeometry): Another try at quieting
	Coverity 10248 "Copy into fixed size buffer" and 10078
	"Overlapping buffer in memory copy" in this dead code.

	* magick/tempfile.c (AcquireTemporaryFileDescriptor): Remove
	unneeded, almost certainly never used, and potentially insecure
	use of mkstemp().  Will quiet Coverity 10315 "Insecure temporary
	file".

2015-04-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Keep Ghostscript gibberish from appearing in
	Configure output.

	* coders/miff.c (WriteRunlengthPacket): Quiet Coverity 10186 and
	10214 "Missing break in switch".

	* magick/pixel_cache.c (GetCacheInfo): Quiet Coverity 10208 "Data
	race condition".

	* magick/blob.c (CloneBlobInfo): Quiet Coverity 10188 "Data race
	condition".
	(GetBlobInfo): Quiet Coverity 10191 "Data race condition".

	* magick/image.c (AllocateImage): Quiet Coverity 10196 "Data race
	condition".
	(CloneImage): Quiet Coverity 10206 "Data race condition".
