@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150503"
-#define public MagickPackageReleaseDate "snapshot-20150503"
+#define public MagickPackageVersionAddendum ".020150504"
+#define public MagickPackageReleaseDate "snapshot-20150504"
